# gsb-engine

./: .env.example  .gitignore  .stylelint.overrides.json  ADVANCED_GUEST_CUSTOMIZE_ARCHITECTURE.md  ADVANCED_SHOPIFY_ARCHITECTURE.md  ANONYMOUS_USER_TEST_GUIDE.md  BROWSER_COMPATIBILITY_SHOPIFY_ANALYSIS.md  BUILD_STATUS.md  CART_IMAGE_CDN_IMPLEMENTATION.md  CRITICAL_ISSUE_PASSWORD_PROTECTION.md  CURRENT_ISSUES_SUMMARY.md  CURRENT_SITUATION.md  CUSTOMER_LOGIN_TEST_GUIDE.md  Caddyfile  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_PRODUCTION.md  DEPLOY_INSTRUCTIONS.md  DEVELOPMENT_STORE_WORKAROUND.md  Dockerfile  EMERGENCY_FIX.md  FINAL_401_FIX_REPORT.md  FINAL_REPORT_PART1_PROBLEM_ANALYSIS.md  FINAL_REPORT_PART2_SERVER_INFRASTRUCTURE.md  FINAL_REPORT_PART3_FILE_STRUCTURE.md  FINAL_REPORT_PART4_LOCALSTORAGE_SURGERY.md  FINAL_REPORT_PART5_ACTION_PLAN.md  FINAL_STATUS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_PHASE1.md  IMPLEMENTATION_SUMMARY.md  MERCHANT_PANEL_ANALYSIS.md  NEW_STORE_MIGRATION_GUIDE.md  OPTION_C_ANALYSIS.md  OPTION_C_DEPLOYMENT.md  OPTION_C_SUMMARY.md  PASSWORD_REMOVAL_GUIDE.md  PLATFORM_ADMIN_REQUIREMENTS.md  PROFESSIONAL_CUSTOMIZE_ROADMAP.md  PROJE_YAPISI.json  PUBLIC_APP_REQUIREMENTS_ANALYSIS.md  (+38 more)
_checkout-extension-wip/: package.json  shopify.extension.toml
docs/: api-crud-extensions.md  api-roadmap.md  api-server.md  auth-tenancy.md  autosave-flow.md  database-schema.md  deployment.md  frontend-integration.md  implementation-roadmap.md  merchant-embedded-ux.md  (+8 more)
services/pricing-service/: Cargo.toml  Dockerfile
services/pricing-service/src/: main.rs
(+296 files in other folders)
