[package]
name = "pricing-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.5"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
redis = { version = "0.24", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
env_logger = "0.11"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

